--- a/Hoja de Vida Digital/index.html
+++ b/Hoja de Vida Digital/index.html
@@ -33,7 +33,7 @@
       <strong>Idiomas:</strong>
       <br>
       <ul>
-        <li><strong>Espaniol:</strong> Hablado , escrito y leído. </li>
+        <li><strong>Español:</strong> Hablado , escrito y leído. </li>
         <li><strong>Inglés:</strong> Leído y escrito.</li>
       </ul>
     </section>
