corregir etiqueta de hobbies

--- a/Hoja de Vida Digital/experiencia.html
+++ b/Hoja de Vida Digital/experiencia.html
@@ -25,7 +25,7 @@
           No soporta video
       </video>
       <br>
-      <p><strong>Hobbies</strong></p>
+      <p><strong>Hobbies y Actividades Recreacionales</strong></p>
       <audio src="audios/hobbies.ogg" title="Hobbies" controls>
           No existe audio
       </audio>
