cambiar formato de video

--- a/Hoja de Vida Digital/experiencia.html
+++ b/Hoja de Vida Digital/experiencia.html
@@ -20,7 +20,7 @@
     <p><h2>Experiencia</h2></p>
     <section id="multimedia">
       <p><strong>Habilidades e Intereses</strong></p>
-      <video src="videos/intereses.mov"  width="300px" height="300px"  controls poster="img/habilidades.jpg" title="Habilidades e Intereses">
+      <video src="videos/intereses.mp4"  width="300px" height="300px"  controls poster="img/habilidades.jpg" title="Habilidades e Intereses">
         <source src="videos/intereses.ogg" type="video/ogg">
           No soporta video
       </video>
