--- a/ManejoImagenes/index.html
+++ b/ManejoImagenes/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Tu concierto</title>
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
-    <h2><img src="img/concert_logo.png" alt="Logo blog de conciertos" title="Logo blog de conciertos" />
+    <h2><img src="img/concert_logo.png" alt="Logo blog de conciertos" title="Logo blog de conciertos" style="background-color: white" />
     <strong>Tu concierto</strong></h2>
     <p>Bienvenidos a este blog de conciertos</p>
-    <img src="img/concert.jpg" width="100%" height="100%"/>
+    <img src="img/concert.jpg" height="100%" style="width:80%">
+    <br>
+    <a href="mailto:info@tuconcierto.com">Info</a>
   </body>
 </html>
