--- a/Hoja de Vida Digital/experiencia.html
+++ b/Hoja de Vida Digital/experiencia.html
@@ -13,6 +13,7 @@
       <h1>Hoja de Vida</h1>
         <h2>Carlos Alberto Desiderio Calderon</h2>
         <h3>Guayaquil, 29 de Diciembre del 2017 </h3>
+          <link rel="stylesheet" href="css/estilos.css">
     </header>
     <nav>
       <a href="index.html">Inicio</a> | <a href="educacion.html">Educación</a> | <a href="experiencia.html">Experiencia</a>
