--- a/Hoja de Vida Digital/index.html
+++ b/Hoja de Vida Digital/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Hoja de Vida</title>
   </head>
-  <body>
-    <header>
+  <body id="Contenedor">
+    <header id="Encabezado">
       <svg height="150" width="500">
         <ellipse cx="230" cy="100" rx="220" ry="30" style="fill:gray" />
         <ellipse cx="220" cy="70" rx="190" ry="50" style="fill:blue" />
@@ -13,6 +13,7 @@
       <h1>Hoja de Vida</h1>
         <h2>Carlos Alberto Desiderio Calderon</h2>
         <h3>Guayaquil, 29 de Diciembre del 2017 </h3>
+        <link rel="stylesheet" href="css/estilos.css">
     </header>
     <nav>
       <a href="index.html">Inicio</a> | <a href="educacion.html">Educación</a> | <a href="experiencia.html">Experiencia</a>
@@ -33,8 +34,8 @@
       <strong>Idiomas:</strong>
       <br>
       <ul>
-        <li><strong>Español:</strong> Hablado , escrito y leído. </li>
-        <li><strong>Inglés:</strong> Leído y escrito.</li>
+        <li class="itemIndice"><strong>Español:</strong> Hablado , escrito y leído. </li>
+        <li class="itemIndice"><strong>Inglés:</strong> Leído y escrito.</li>
       </ul>
     </section>
     <br>
