--- a/EtiquetasSemanticas/index.html
+++ b/EtiquetasSemanticas/index.html
@@ -10,6 +10,7 @@
         <img src="img\recetas.jpg">Recetas.com
       </h1>
         <link rel="stylesheet" href="css/estilos.css">
+        <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     </header><br>
       <navbar id="menu-principal">
         <a href="">Recetas Principales</a>|  <a href="">Postres Latinos</a>
