--- a/FormulariosYAtributos/index.html
+++ b/FormulariosYAtributos/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
     <form autocomplete="on" name="Mi primer Formulario">
     <h1>Registro en nuestra tienda</h1>
-    <label for="">Nombre de Usuario</label><br>
+    <label>Nombre de Usuario</label><br>
     <input type="text" placeholder="Ej: Luis" autofocus required><br>
-    <label for="">Email</label><br>
-
-    <input type="text" placeholder="Ej: Luis@gmail.com"><br>
-    <label for="">Edad</label><br>
+    <label>Email</label><br>
+    <input type="text" name="email" placeholder="Ej: Luis@gmail.com"><br>
+    <label>Edad</label><br>
     <input type="text" placeholder="Ej: 21"><br>
-    <label for="">Género</label><br>
+    <label>Género</label><br>
     <input type="radio" name="RAD">
      <label>MASCULINO</label><br>
      <input type="radio" name="RAD">
@@ -25,16 +25,11 @@
     <option value="">Amigo</option>
     <option value="">Redes Sociales</option>
   </select><br>
-  <textarea name="name" rows="8" cols="80">
+  <textarea name="name">
   </textarea><br>
-  <label for="">Acepto Terminos y Condiciones</label><br>
+  <label>Acepto Terminos y Condiciones</label><br>
   <input type="checkbox" name="" value=""><br>
   <input type="submit" name="Enviar" value="Enviar">
-
-
-
-
-
     </form>
   </body>
 </html>
