--- a/CssDisenioWebResponsive_Carlos_Desiderio/index.html
+++ b/CssDisenioWebResponsive_Carlos_Desiderio/index.html
@@ -9,25 +9,42 @@
   <body>
     <head>
       <div class="Contenido">
-        <header>
           <!-- Encabezado -->
-          <div class="cabecera">
-            <h1 class="titulo">Comenzando con la fotografía</h1>
-            <nav>
-              <a href="#">Inicio</a>
-              <a href="#">Paisajes</a>
-              <a href="#">Retratos</a>
-            </nav>
-          </div>
-        </header>
-          <!-- Imagen Central -->
-        <div class="imagenCentral">
-          <img src="img/imagenCentral.jpg">
-        </div>
-          <!-- Imagenes Secuendarias -->
-        <div class="">
+          <section class="cabecera">
+            <div class="cabecera">
+              <h1 class="titulo">Comenzando con la fotografía</h1>
+              <nav>
+                <a href="#">Inicio</a>
+                <a href="#">Paisajes</a>
+                <a href="#">Retratos</a>
+              </nav>
+            </div>
+          </section>
+            <!-- Imagen Central -->
+          <section class="imagenCentral">
+            <div >
+              <figure>
+                  <img src="img/imagenCentral.jpg">
+              </figure>
 
-        </div>
+            </div>
+          </section>
+          <!-- Imagenes Secundarias -->
+          <section class="imagenesSecundarias">
+            <div class="imagenIzquierda">
+              <figure>
+                  <img src="img/imagenIzquierda.jpEg">
+                  <figcaption>Paisajes</figcaption>
+              </figure>
+            </div>
+            <div class="imagenDerecha">
+              <figure>
+                  <img src="img/imagenDerecha.jpg">
+                  <figcaption>Retratos</figcaption>
+              </figure>
+            </div>
+          </section>
+
           <!-- Pie de Paginas -->
         <div class="">
 
