--- a/CssDisenioWebResponsive_Carlos_Desiderio/index.html
+++ b/CssDisenioWebResponsive_Carlos_Desiderio/index.html
@@ -11,14 +11,14 @@
       <div class="Contenido">
           <!-- Encabezado -->
           <section class="cabecera">
-            <div class="cabecera">
+            <div class="">
               <h1 class="titulo">Comenzando con la fotografía</h1>
               <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Paisajes</a>
                 <a href="#">Retratos</a>
               </nav>
-            </div>
+            </div>            
           </section>
             <!-- Imagen Central -->
           <section class="imagenCentral">
@@ -46,9 +46,30 @@
           </section>
 
           <!-- Pie de Paginas -->
-        <div class="">
+          <section class="Pie">
+            <div class="contacto">
+              <h1>Contacto</h1>
+              <p>cdesiderio@saicoconsulting.com</p>
+              <p>Cdla. Garzota</p>
+              <p>095967833</p>
+            </div>
+            <div class="termino">
+              <h1>Término</h1>
+              <p>Es un sitio ideal para ti..</p>
+            </div>
+            <div class="redesSociales">
+              <h1>Redes Sociales</h1>
+              <p>Síguenos en ... </p>
+              <p><img src="img/facebook.png"> @fotosUnicas</p>
+              <p><img src="img/instagram.png"> @fotosUnicasIns</p>
+              <p><img src="img/twitter.png"> @fotosUnicasTw</p>
+            </div>
+            <div class="derechosAutor">
+              <h1>Derechos</h1>
+              <p>Carlos Desiderio® - 2018</p>
+            </div>
+          </section>
 
-        </div>
 
 
       </div>
